# tg2gd

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
bot/handlers/: __init__.py  oauth.py  start.py  upload.py
db/: __init__.py  connection.py  queries.py
docs/plans/: 2026-01-21-google-oauth-design.md
migrations/: 001_initial.sql  002_add_folder_id.sql
services/: google_auth.py  google_drive.py
